# legibot2

./: pyproject.toml
legibot2/: alison.py
tests/: test_alison.py
